PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/NoINDEXAsVariable.par
NoINDEXAsVariable {



seq main() : Void {

    var Int INDEX = 0
    var Int INDEX0 = 1
}
}